# scribe

./: .gitignore  .gitlab-ci.yml  .scribe.yml  AGENTS.md  INSTALL.md  README.md  install.sh  pyproject.toml
.github/workflows/: tests.yml
.scribe/: scribe-manifest.json
docs/: DEMO-SCRIPT.md  DEVPOST.md  IMPLEMENTATION.md  scribe-system-design.md
flow/: scribe.yml
scribe/: cli.py  config.py  drift.py  extractor.py  fingerprint.py  manifest.py  models.py  renderer.py  synthesizer.py
scribe/adapters/: gitlab.py  orbit.py
scribe/enrich/: ownership.py
tests/: conftest.py  test_cli.py  test_config_manifest.py  test_drift.py  test_extractor.py  test_fingerprint.py  test_gitlab.py  test_orbit.py  test_renderer.py  test_synthesizer.py
tests/fixtures/: graph_small.json
